Did Statistics and some FriendList

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,7 +2,7 @@
     width: 250px;
     /* height: 300px; */
     
-    border: dashed red;
+    /* border: dashed red; */
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     margin: auto;
     background-color: antiquewhite;
@@ -18,6 +18,7 @@
     align-items: center;
     margin: auto;
     display: block;
+    background-color: beige;
 
     padding-bottom: 10px;
 }
@@ -37,4 +38,5 @@
     background-color: aliceblue;
     border: 10px;
     border-color: black;
+    
 }
