--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -7,4 +7,7 @@
     list-style: none;
     background-color: aliceblue;
     margin-top: 30px;
+    gap: 10px;
+    align-items: stretch;
+    padding: 0;
 }
