--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -8,4 +8,12 @@
     display: flex;
     background-color: antiquewhite;
     align-items: center;
+    gap: 20px;
+}
+
+.avatar{
+    border-radius: 50%;
+    background-color:aliceblue;
+    width: 50px;
+    height: 50px;
 }
